# 2022-lpi

./: .gitignore  .travis.yml  README.md
.github/workflows/: lpi-tests.yml
docs/: odovzdavanie.md
examples/nqueens/: README.md  nqueens.py  nqueensTest.py
examples/party/: party.cpp  party.py
examples/sat/: sat.cpp  sat.h  sat.py
examples/satsolver/: README.md  SatSolver.java  Theory.java  build.gradle
prakticke/: README.md
prakticke/bonus01/: README.md
prakticke/bonus01/bonus01-python/: MurderMystery.py  models.py  murderMysteryTest.py
prakticke/pu01/: README.md  spyGoal.txt  spyTheory.txt  test.py  text2dimacs.html  text2dimacs.js
prakticke/pu02/: README.md  SudokuSolver.py
prakticke/pu02/pu02-cpp/: CMakeLists.txt  SudokuSolver.cpp  SudokuSolver.h  sudokuTest.cpp
prakticke/pu02/pu02-java/: SudokuSolver.java  SudokuTest.java  build.gradle
prakticke/pu02/pu02-python/: SudokuSolver.py  sudoku.py  sudokuTest.py
prakticke/pu03/: README.md
prakticke/pu03/pu03-java/: Formula.java  FormulaTest.java  Structure.java  Tester.java  build.gradle
prakticke/pu04/: README.md
prakticke/pu04/pu04-java/: Cnf.java  CnfTest.java  Formula.java  FormulaTest.java  Tester.java  (+1 more)
prakticke/pu05/: README.md
prakticke/pu06/: README.md
prakticke/pu07/: README.md
prakticke/pu08/: README.md
prakticke/pu09/: README.md
prakticke/pu10/: README.md
prakticke/pu11/: README.md
prakticke/pu12/: README.md
prakticke/sat/: README.md  test.py
prednasky/: README.md
teoreticke-ain/: README.md  tu10.workbook
test/: common.sh  travis.sh
tools/mac/: minisat
(+56 files in other folders)
